@@ -2071,6 +2071,31 @@ class TriangulationBase :
         template <int k>
         bool pachner(Face<dim, k>* f, bool check = true, bool perform = true);
 
+        /**
+         * If possible, returns the triangulation obtained by performing a
+         * (\a dim + 1 - \a k)-(\a k + 1) Pachner move about the given
+         * <i>k</i>-face of this triangulation.  If such a move is not allowed,
+         * or if such a move would violate any simplex and/or facet locks,
+         * then this routine returns no value.
+         *
+         * This triangulation will not be changed.
+         *
+         * For more detail on Pachner moves and when they can be performed,
+         * see pachner().
+         *
+         * \pre The given <i>k</i>-face is a <i>k</i>-face of this
+         * triangulation.
+         *
+         * \tparam k the dimension of the given face.  This must be
+         * between 0 and (\a dim) inclusive.
+         *
+         * \param f the <i>k</i>-face about which to perform the move.
+         * \return The new triangulation obtained by performing the requested
+         * move, or no value if the requested move cannot be performed.
+         */
+        template <int k>
+        std::optional<Triangulation<dim>> tryPachner(Face<dim, k>* f) const;
+
         /*@}*/
         /**
          * \name Subdivisions, Extensions and Covers
@@ -4940,6 +4965,26 @@ inline Isomorphism<dim> TriangulationBase<dim>::randomiseLabelling(
     TopologyLock lock(*this);
     *this = iso(static_cast<Triangulation<dim>&>(*this));
     return iso;
+}
+
+template <int dim>
+template <int k>
+std::optional<Triangulation<dim>> TriangulationBase<dim>::tryPachner(
+        Face<dim, k>* f) const {
+    static_assert(0 <= k && k <= dim, "tryPachner() requires a "
+        "facial dimension between 0 and dim inclusive.");
+
+    // In general pachner() is non-const, but we are not asking it to perform
+    // the move, just to check whether it's legal.
+    if (! const_cast<TriangulationBase<dim>>(this)->pachner(f, true, false))
+        return {};
+
+    std::optional<Triangulation<dim>> ans(*this);
+    if constexpr (k < dim)
+        ans->pachner(ans->translate(f), false, true);
+    else
+        ans->pachner(ans->simplex(f->index()), false, true);
+    return ans;
 }
 
 template <int dim>
